# ERPNext-Opportunity-Assignment-App

./: LICENSE  pyproject.toml  setup.py
opportunity_assignment/: README.md  hooks.py  modules.txt  patches.txt
opportunity_assignment/config/: desktop.py
opportunity_assignment/opportunity_assignment/: __init__.py  tasks.py
opportunity_assignment/opportunity_assignment/api/: api.py
opportunity_assignment/opportunity_assignment/doctype/: __init__.py
opportunity_assignment/opportunity_assignment/doctype/opportunity_assignment/: __init__.py  opportunity_assignment.js  opportunity_assignment.json  opportunity_assignment.py  opportunity_assignment_list.js  test_opportunity_assignment.py
opportunity_assignment/opportunity_assignment/doctype/opportunity_assignment_item/: __init__.py  opportunity_assignment_item.json
opportunity_assignment/opportunity_assignment/page/: __init__.py
opportunity_assignment/opportunity_assignment/page/employee_opportunities/: __init__.py  employee_opportunities.js  employee_opportunities.json
opportunity_assignment/public/css/: opportunity_assignment.css
opportunity_assignment/public/js/: opportunity_custom.js
