[project]
name = "opportunity_assignment"
version = "1.0.0"
description = "Opportunity Assignment Management for ERPNext"
authors = [
    {name = "aDu944", email = "your-email@example.com"}
]
dependencies = [
    "frappe>=14.0.0"
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"
